# django-fast-ratelimit

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  test_settings.py  tox.ini
.github/workflows/: test.yml
django_fast_ratelimit/: __init__.py  _core.py  _epoch.py  methods.py  misc.py
ratelimit/: __init__.py  _core.py  _epoch.py  methods.py  misc.py
tests/: test_decorator.py  test_ips.py  test_methods.py  test_ratelimit.py
