[tool.poetry]
name = "django-fast-ratelimit"
description = "Fast ratelimit implementation with django caches"
version = "0.11.1"
license = "MIT"
authors = ["Alexander Kaftan"]
readme = "README.md"
repository = "https://github.com/devkral/django-fast-ratelimit"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only"
]
packages = [
  { include = "ratelimit" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
django = ">=3.0"

[tool.poetry.group.test.dependencies]
tox = "*"

[tool.poetry.group.dev.dependencies]
tox = "*"
django = ">=4.0"
faker = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
