
[project]
name = "django-fast-ratelimit"
description = "Fast ratelimit implementation with django caches"
version = "9.1.2"
license = "MIT"
authors = [{ name = "Alexander Kaftan", email = "devkral@web.de" }]
readme = "README.md"
repository = "https://github.com/devkral/django-fast-ratelimit"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only"
]
requires-python = ">=3.10,<4.0"
dependencies = ["django>=3.0"]

[tool.hatch.envs.hatch-test]
extra-dependencies = ["tox"]

[tool.hatch.envs.hatch-test.scripts]
run = "tox -s true -- {args}"
run-cov = "tox -s true -- {args}"


[tool.hatch.envs.default]
dependencies = ["faker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
